<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LokerApp</string>


    <string name="title_home">Recent Job</string>
    <string name="title_seen">Last Seen Job</string>
    <string name="title_search">Search</string>
    <string name="title_person">My Resume</string>

    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_content_off">2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_drawer">Cari Kerja Kuy</string>

    <string name="resume">Name</string>
    <string name="resumeLocation">Location</string>
    <string name="resumeEducation">Education</string>
    <string name="resumeExp">Experience</string>
    <string name="resumeSkill">Skills</string>
    <string name="resumeContac">Contac</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
