<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_seen"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_alreadyseen"
            android:title="@string/title_seen" />
        <item
            android:id="@+id/nav_search"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/search"
            android:title="@string/title_search" />

        <item
            android:id="@+id/nav_person"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/person"
            android:title="@string/title_person" />
        <item
            android:id="@+id/nav_riwayat"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_riwayat"
            android:title="Riwayat" />
        <item
            android:id="@+id/nav_saved"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_saved"
            android:title="Saved Jobs" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="Logout" />

    </group>



</menu>
