<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--<androidx.cardview.widget.CardView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="100dp"-->
                <!--app:cardCornerRadius="50dp">-->
                <ImageView
                    android:id="@+id/image_choose"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_profile"/>

            <!--</androidx.cardview.widget.CardView>-->
            <TextView
                android:id="@+id/id_tv_name"
                android:text="@string/resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/id_tv_location"
                android:text="@string/resumeLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:text="update foto"
                android:id="@+id/update_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="#f0f0f0"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/resumeEducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/id_edt_education"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/resumeExp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/id_edt_exp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/resumeSkill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/id_edt_skill"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/resumeContac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/id_edt_contac"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>